# mxgordon.github.io

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json  rust-toolchain.toml  translate.html
.github/workflows/: gh-pages-deploy.yml
assets/: styles.scss
docs/: 404.html
docs/assets/: Max_Gordon_resume-f32a2762b34de102.pdf.br  email-0e2c3245f3d60689.png.br  favicon-9703cc470d546bfc.ico.br  github-da34a1d3bfe3bc80.png.br  linkedin-49b7ea0afaa08807.png.br  mxgordon-github-io-5ce3ba3de2824f6d.js  mxgordon-github-io-5ce3ba3de2824f6d.js.br  mxgordon-github-io_bg-577899594fed2d0f.wasm  mxgordon-github-io_bg-577899594fed2d0f.wasm.br  resume-6b2802a66c49ae85.png.br  styles-fdbbc16296ab5484.css  styles-fdbbc16296ab5484.css.br
public/: index.html  styles.css  styles.scss
src/: App.css  App.js  commands.rs  index.css  lib.rs  main.rs
src/commands/: about.rs  gallery.rs  help.rs  intro.rs  mod.rs  projects.rs  search.rs  typewriter.rs  utils.rs
src/pages/: home.rs  img_viewer.rs  mod.rs  not_found.rs
static/css/: main.13cbf075.css  main.13cbf075.css.map  main.e8cc04a6.css  main.e8cc04a6.css.map  main.fc24238b.css  main.fc24238b.css.map
static/js/: 453.c33a787a.chunk.js  453.c33a787a.chunk.js.map  main.0515e5d2.js  main.0515e5d2.js.map  main.0f0ac906.js  main.0f0ac906.js.map  main.30731704.js  main.30731704.js.map  main.6c070254.js  main.6c070254.js.map  main.6e03dfa4.js  main.6e03dfa4.js.map  main.72c99f4f.js  main.72c99f4f.js.map  main.72eb60c8.js  main.72eb60c8.js.map  (+4 more)
