[package]
name = "mxgordon"
version = "0.0.2"
edition = "2024"
authors = ["Max Gordon <mgordon291us@gmail.com>"]

[dependencies]
leptos = { version = "0.8.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.5", features = ["nightly"] }
console_log = "1"
log = "0.4.27"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2.1"
levenshtein = "1.0.5"
web-sys = { version = "0.3.77", features = ["Document", "DomRect", "Element", "NodeList"] }
wasm-bindgen-test = "0.3.50"


[dev-dependencies]
wasm-bindgen = "0.2.100"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
