[package]
name = "mxgordon-github-io"
version = "0.2.0"
authors = ["Max Gordon <mgordon291us@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
levenshtein = "1.0.5"
dioxus-sdk = { version = "0.6", features = ["timing"] }
async-std = "1.13.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
